# vega

./: .env.example  .gitignore  INTEGRATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .gitignore  README.md  drizzle.config.ts  package.json  tsconfig.json  wrangler.jsonc
apps/api/drizzle/: 0000_complex_bloodstorm.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: app.ts  index.ts
apps/api/src/auth/: index.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/routes/: auth.ts  backtests.ts  botCopy.ts  bots.ts  builder.ts  copilot.ts  leaderboard.ts  marketplace.ts  portfolios.ts  readiness.ts  runs.ts  telegram.ts
apps/web/: .env.production  .gitignore  components.json  next.config.ts  package.json  tailwind.config.ts
apps/web/scripts/: sodex-run-loop-smoke.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: vega-logo.tsx
apps/web/src/lib/: app-shell.ts  copy-dashboard.ts  disable-missing-backend.ts  (+9 more)
docs/: TESTING.md
plans/20260605-1546-finish-real-sodex-execution/: phase-01-agent-run-loop.md  phase-02-live-pnl-monitoring.md  phase-03-social-backend.md  plan.md
plans/20260606-vega-fullflow-audit/: audit-report.md  p1d-backend-contract-and-plan.md
services/sosodex-backend/: README.md  alembic.ini  pyproject.toml
services/sosodex-backend/db/migrations/: env.py
services/sosodex-backend/src/: main.py
services/sosodex-backend/src/db/: supabase.py
services/vega-backend/: README.md  alembic.ini  pyproject.toml
services/vega-backend/src/: main.py
(+78 files in other folders)
